[package]
name = "artimonist-wasm"
version = "0.3.0"
description = "Artimonist - A tool for generating mnemonics and wallets."
authors = ["Artimonist <artimonist@gmail.com>"]
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/wasm/"

license = "MIT"
keywords = ["bitcoin", "mnemonic"]
categories = ["cryptography"]
rust-version = "1.84.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O']

[dependencies]
wasm-bindgen = "0.2"
artimonist = "0.11.5"
flate2 = "1.0.35"
aes-gcm = "0.10.3"
# hex = "0.4.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
