[package]
name = "artimonist-wasm"
version = "0.3.1"
description = "Artimonist - A tool for generating mnemonics and wallets."
authors = ["Artimonist <artimonist@gmail.com>"]
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/wasm/"

license = "MIT"
keywords = ["bitcoin", "mnemonic"]
categories = ["cryptography"]
rust-version = "1.84.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
artimonist = "0.11.5"
flate2 = "1.0.35"
# custom random of aes for wasm target
aes-gcm = {version = "0.10.3", default-features = false, features = ["aes", "alloc"]}
rand = "0.9.0"
getrandom = {version = "0.3", features=["wasm_js"]} # export RUSTFLAGS='--cfg getrandom_backend="wasm_js"'
base64 = "0.22.1"

[profile.release]
lto = true
opt-level = 'z'

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O']
